fix: deck-lazy-img fill full card width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2885,12 +2885,12 @@ h2 {
 
 .deck-lazy-wrapper {
   position: relative;
-  
+  width: 100%;
   height: 100%;
 }
 
 .deck-lazy-img {
-  
+  width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;
